fix: Ajustes finais para entrega